pushing to see if someone else can help, has a basic implementation of showing items in profile view
